PPC64 safepoint mechanism: Fix initialization on AIX and support SIGTRAP

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b39
    • ppc

        VM crashes on AIX when using -XX:-OptimizePollingPageLocation or when allocation at desired addresses failed.
        In addition, SIGTRAP-based polling performs slightly better on PPC64 and avoids the need for allocating a protected page.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: