8194258: PPC64 safepoint mechanism: Fix initialization on AIX and support SIGTRAP

Use mmap on AIX to allocate protected page. Use trap instructions for polling if UseSIGTRAP is enabled.

Reviewed-by: rehn, goetz